click while toast open on mobile fixed

--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -1218,6 +1218,7 @@ body:not(.dark-mode) a.toggle-dark-mode-btn {
   text-align: center;
   font-family: $font-family-metropolis;
   font-weight: bold;
+  pointer-events: none;
   @include h6;
 
   .toast-body {
@@ -1225,6 +1226,7 @@ body:not(.dark-mode) a.toggle-dark-mode-btn {
     background: #FFFFFF;
     border-radius: 50px;
     padding: 0.75rem 1.5rem;
+    pointer-events: auto;
   }
 
   @include media-breakpoint-down(sm) {
